# autonome_systeme_s3

./: .gitignore  PROJECT.md  README.md
bauer/: costmap_common_params_burger.yaml  dwa_local_planner_params_burger.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/custom_packages/: CMakeLists.txt  package.xml  setup.py
src/custom_packages/launch/: drive_straight.launch
src/custom_packages/nodes/: drive_straight.py
src/fhv_labyrinth/: CMakeLists.txt  package.xml  setup.py
src/fhv_labyrinth/discover/: rviz.rviz
src/fhv_labyrinth/launch/: all.launch  discover.launch  discover_level.launch  fhv_labyrinth.launch  mapsave.launch  mux_demo.launch  robot.launch  robot_detectTags.launch  robot_exploration.launch  robot_lidar.launch  robot_manageTags.launch  robot_mapping.launch  robot_movement.launch  robot_roomCleaner.launch  robot_rviz.launch  visitor.launch
src/fhv_labyrinth/nodes/: coop_tag_finder.py  detectTags.py  lidar_filter.py  manageTags.py  mux_controller.py  pessimistic_mapper.py  pessimistic_mask.py  producer_2.py  pubsubsample.py  roomCleaner.py  spinner.py  tag_detector.py  tag_saver.py  tag_visitor.py  tf_cam.py
src/fhv_labyrinth/nodes/subsumption/: consumer.py  (+1 more)
src/fhv_labyrinth/param/: amcl_params.yaml  base_local_planner_params.yaml  costmap_common_params_burger.yaml  dwa_local_planner_params.yaml  dwa_local_planner_params_burger.yaml  dwa_local_planner_params_burger_discover.yaml  dwa_local_planner_params_burger_visitor.yaml  explore_lite_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  global_planner_params_burger_discover.yaml  global_planner_params_burger_visitor.yaml  local_costmap_params.yaml  move_base_params.yaml  pessimistic_mapper_params.yaml
src/fhv_labyrinth/rviz/: discover.rviz  rviz.rviz  turtlebot3_fhv_labyrinth.rviz  visitor.rviz
src/my_first_ros_pkg/: CMakeLists.txt  package.xml
src/my_first_ros_pkg/src/: hello_world_node.cpp
src/tools/: calibrate.py  undistort.py
unterlagen/TurtlebotCode/: .bashrc  initializeTurtleBlobs.sh  initializeTurtleCam.sh
unterlagen/instructions/: pixyManual.txt  setupManual.txt
(+1 files in other folders)
